# Terminal-Text-Editor-

./: .gitignore  CMakeLists.txt  Command.cpp  Command.h  CommandHistory.cpp  Cursor.cpp  Cursor.h  ECCommand.cpp  ECCommand.h  ECCommandHistory.cpp  ECCommandHistory.h  ECCursor.h  ECEditorTest.cpp  ECObserver2.cpp  ECObserver2.h  ECTextController.cpp  ECTextController.h  ECTextModel.cpp  ECTextModel.h  ECTextView.cpp  ECTextView.h  ECTextViewImp.cpp  ECTextViewImp.h  Main.cpp  Makefile  Observer2.cpp  Observer2.h  README.md  TextController.cpp  TextController.h  TextModel.cpp  TextModel.h  TextView.cpp  TextView.h  keywords.txt  myeditor
include/: Cursor.h  ECTextViewImp.h  TextController.h  TextModel.h  TextView.h
src/: Command.cpp  CommandHistory.h  Cursor.cpp  Cursor.h  Observer2.cpp  Observer2.h  TextController.cpp  TextModel.cpp  TextModel.h  TextView.cpp  TextView.h
